[project]
name = "blog-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.0",
    "langchain-huggingface>=1.2.0",
    "mistral-inference>=1.6.0",
    "newsapi-python>=0.2.7",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
